# screws_and_nuts

./: .gitignore  CMakeLists.txt  README.md  binarization.cpp  binarization.h  draw_histogram.cpp  draw_histogram.h  main.cpp
